# rust-notebooks

./: .env.example  .gitignore  Cargo.toml  README.md  index.html
cli_01/: README.md
code_style/cli_01/src/: main.rs
code_style/log_01/: Cargo.toml
code_style/log_01/src/: main.rs
code_style/macro_01/src/: myvec.rs
code_style/stream_01/src/: main.rs
code_style/trait_01/src/: main.rs
code_style/trait_03/src/: main.rs
code_style/trait_05/src/: main.rs
code_style/type_01/src/: main.rs
code_style/xml_01/src/: lib.rs
gat_01/: Cargo.toml
gat_02/: Cargo.toml  README.md
gat_02/src/: lib.rs  main.rs  scalar.rs
gat_02/src/array/: primitive_array.rs  scalar.rs  string_array.rs
gat_02/src/impls/: array.rs  iterator.rs  mod.rs  scalar.rs
gat_02/src/traits/: array_trait.rs  mod.rs  scalar_trait.rs
gat_03/: Cargo.toml
macro_01/: Cargo.toml
new_create_playground/enum_dispatch/: Cargo.toml
new_create_playground/enum_dispatch/tests/: tests_01.rs
new_create_playground/executor/: Cargo.toml
new_create_playground/executor/src/: lib.rs  main.rs  plan_visitor.rs
new_create_playground/executor/src/plan_nodes/: logical_projection.rs  logical_table_scan.rs  logical_top_n.rs  mod.rs  physical_projection.rs  physical_table_scan.rs  physical_top_n.rs
new_create_playground/futures_async_stream/: Cargo.toml
new_create_playground/futures_async_stream/src/: main.rs
new_create_playground/futures_async_stream/tests/: async_handle.rs  file_channel.rs  i32_stream.rs  minitrace.rs  trace_span.rs  try_end.rs
new_create_playground/macro/src/: main.rs  myvec.rs
new_create_playground/stream_02/: Cargo.toml
new_create_playground/stream_02/tests/: future_stream.rs
new_create_playground/test_case/: Cargo.toml
new_create_playground/test_case/src/: main.rs
new_create_playground/tokio/: Cargo.toml
new_create_playground/tokio/tests/: join.rs  join_all.rs  select.rs
new_create_playground/type_exersice/src/: array.rs
proof_of_concept/: Cargo.toml
proof_of_concept/cli_01/: Cargo.toml
proof_of_concept/iter_01/: Cargo.toml
proof_of_concept/iter_01/src/: main.rs
proof_of_concept/iter_01/tests/: for.rs  iter_stream.rs
proof_of_concept/log_01/src/: main.rs
proof_of_concept/macro_01/: README.md
proof_of_concept/src/: generatic.rs  iter_stream.rs  log_env.rs  main.rs  minitrace_cli.rs  quick_xml.rs  sort_merge_join.rs  stream_flatmap.rs  trait_fn.rs
proof_of_concept/trait_04/: README.md
proof_of_concept/trait_04/src/: main.rs
proof_of_concept/trait_05/src/: main.rs
proof_of_concept/type_01/src/: degree_trait.rs
proof_of_concept/type_01/src/impls/: bachelors.rs  master.rs  mod.rs  phd.rs
proof_of_concept/xml_01/: Cargo.toml
stream_01/: Cargo.toml
stream_01/src/: main.rs
trait_03/src/: main.rs
trait_04/src/: main.rs
trait_05/: README.md
trait_05/src/: main.rs
type_01/: Cargo.toml  README.md
type_01/src/: degree_trait.rs  lib.rs  main.rs
type_01/src/impls/: bachelors.rs  master.rs  mod.rs  phd.rs
type_exersice/: Cargo.toml
type_exersice/src/array/: iterator.rs
xml_01/: Cargo.toml
xml_01/src/: lib.rs  main.rs
