[workspace]
members = [
    "code_style/trait_01",
    "code_style/trait_03",
    "code_style/type_01",
    "code_style/cli_01",
    "code_style/xml_01",
    "code_style/log_01",
    "code_style/stream_01",
    "code_style/trait_04",
    "code_style/trait_05",
    "new_create_playground/type_exersice",
    "new_create_playground/test_case",
    "new_create_playground/enum_dispatch",
    "new_create_playground/futures_async_stream"
]