[workspace]
members = [
    "proof_of_concept",
    "new_create_playground/type_exersice",
    "new_create_playground/test_case",
    "new_create_playground/enum_dispatch",
    "new_create_playground/futures_async_stream",
    "new_create_playground/tokio",
    "new_create_playground/macro",
    "new_create_playground/executor",
]