[package]
name = "stream_01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
reqsign = "0.0.2"
reqwest = { version = "0.11", features = ["stream"] }
dotenv = "0.15"
anyhow = "1"
tokio = { version = "1.17", features = ["full"] }
hyper-tls = "0.5.0"
bytes = "1"
futures = { version = "0.3", features = ["alloc"] }
xml_01 = { path = "../xml_01", version = "0.1" }