[package]
name = "futures_async_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-async-stream = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
minitrace = "0.4.0"
csv = "1"
minitrace-jaeger = "0.4"