[package]
name = "cli_01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
minitrace = "0.4.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"